--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "mysql": "^2.15.0",
     "sinon": "^4.2.2"
   },
   "devDependencies": {
