--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "grunt": "^1.0.3",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-execute": "^0.2.2",
     "mocha": "^4.1.0"
   }
 }
